# jacobi

./: .RData  .Rhistory  .gitignore
JacobiSeq/: main.cpp
Testing/: plot.r  (+3 more)
Testing/Jacobi/: CMakeLists.txt  Makefile  input.in  main.cpp
Testing/Jacobi/solvers/: jacobiffsolver.cpp  jacobiffsolver.h  jacobisequentialsolver.h  jacobisolver.cpp  jacobisolver.h
Testing/JacobiFF/: CMakeLists.txt  input.in  main.cpp
Testing/JacobiFF/fastflow/examples/OpenCVvideo/: ffvideo_nf2.cpp
Testing/JacobiFF/fastflow/tutorial/basic_examples/: parfor_exp.cpp
Testing/JacobiFF/fastflow/tutorial/fftutorial_source_code/: README
Testing/JacobiFF/fastflow/tutorial/fftutorial_source_code/examples/blk_matmul/: blk_matmul_mdf.cpp
Testing/JacobiFF/fastflow/tutorial/fftutorial_source_code/examples/dotprod/: Makefile
Testing/JacobiFF/fastflow/tutorial/fftutorial_source_code/examples/imagesfilter/: img.cpp  img_farm+pipe.cpp  img_farm2.cpp  img_pipe+farm.cpp  img_pipe2.cpp
Testing/JacobiFF/fastflow/tutorial/fftutorial_source_code/examples/mandelbrot_stream/: mandel.cpp
Testing/JacobiFF/fastflow/tutorial/fftutorial_source_code/examples/matmul/: Makefile
Testing/JacobiFF/fastflow/tutorial/fftutorial_source_code/tests/: Makefile  arraysum2.cpp  fancy_pipeline.cpp  hello_farm.cpp  hello_farm3.cpp  hello_map.cpp  hello_mdf.cpp  parfor1.cpp
Testing/testingPerf/: CMakeLists.txt  main.cpp
Testing/testingPerf/fastflow/.svn/: wc.db
Testing/testingPerf/fastflow/tutorial/basic_examples/: farm_basic.cpp
Testing/testingPerf/fastflow/tutorial/fftutorial_source_code/tests/: ff_send_out_to.cpp  hello_farm2.cpp  hello_farm4.cpp  hello_node.cpp  hello_pipe.cpp  hello_pipe2.cpp
(+131 files in other folders)
